# KnightFallR2

./: .gitignore  CMakeLists.txt  dev_notes.md  general_config.conf  modem.conf  overlay_modem.conf  overlay_rtt_shell_console.conf  overlay_sensors.conf  prj.conf  readme.md  rtt_console.conf  rtt_shell.conf  rtt_shell_console.conf  sensors.conf  uart_shell.conf  uart_shell_config.conf  usb.conf
boards/: mcp9808.overlay
deprecated.old/unused.archive/: sensors.conf
deprecated.old/unused_lib.archive/sensors_custom/: adxl343.c  mcp9808.h
deprecated.old/usb_fallback_conf.archive/: usb_config.conf
dts/: spi3.dtsi
gui/: gui.py  mqtt.py
inc/: main.h
lib/jsmn/: jsmn.h
lib/mcp3008_adc/: mcp3008.c  mcp3008.h
lib/mcp9808/: mcp9808.c  mcp9808.h
lib/sam_m8q_gps/: sam_m8q.c  sam_m8q.h
lib/saraR4_modem/: dbg_led.c  dbg_led.h  sara_r4.c  sara_r4.h  sara_r4_cmds.c  sara_r4_cmds.h
lib/sensor_ctrl/: sensor_ctrl.c  sensor_ctrl.h  sensor_pwr.c  sensor_pwr.h
lib/sensor_pwr/: sensor_pwr.c  sensor_pwr.h
lib/sensors_custom/: adxl343.c  adxl343.h  mcp9808.c  mcp9808.h  sensors.c  sensors_custom.h
lib/sys_led/: dbg_led.c  dbg_led.h
lib/sys_pwr/: sys_pwr.c  sys_pwr.h
lib/tsd10/: tsd10_adc.c  tsd10_adc.h
src/: main.c
unused/: rtt_shell.conf
unused.archive/: rtt_shell_batt_test.conf
